--- a/Advent.UnitTests/Advent.UnitTests.csproj
+++ b/Advent.UnitTests/Advent.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Day2\Day2.csproj" />
     <ProjectReference Include="..\Day3\Day3.csproj" />
     <ProjectReference Include="..\Day4\Day4.csproj" />
+    <ProjectReference Include="..\Day5\Day5.csproj" />
   </ItemGroup>
 
 </Project>
