--- a/Advent.UnitTests/Advent.UnitTests.csproj
+++ b/Advent.UnitTests/Advent.UnitTests.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\Day3\Day3.csproj" />
     <ProjectReference Include="..\Day4\Day4.csproj" />
     <ProjectReference Include="..\Day5\Day5.csproj" />
+    <ProjectReference Include="..\Day6\Day6.csproj" />
   </ItemGroup>
 
 </Project>
