--- a/Advent.UnitTests/Advent.UnitTests.csproj
+++ b/Advent.UnitTests/Advent.UnitTests.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\Day5\Day5.csproj" />
     <ProjectReference Include="..\Day6\Day6.csproj" />
     <ProjectReference Include="..\Day7\Day7.csproj" />
+    <ProjectReference Include="..\Day8\Day8.csproj" />
   </ItemGroup>
 
 </Project>
