Day 9 - IntCode: BigInteger, Relative Mode, Memory Resizing

--- a/Advent.UnitTests/Advent.UnitTests.csproj
+++ b/Advent.UnitTests/Advent.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -14,14 +14,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Day1\Day1.csproj" />
     <ProjectReference Include="..\Day2\Day2.csproj" />
     <ProjectReference Include="..\Day3\Day3.csproj" />
     <ProjectReference Include="..\Day4\Day4.csproj" />
     <ProjectReference Include="..\Day5\Day5.csproj" />
     <ProjectReference Include="..\Day6\Day6.csproj" />
     <ProjectReference Include="..\Day7\Day7.csproj" />
-    <ProjectReference Include="..\Day8\Day8.csproj" />
+    <ProjectReference Include="..\Day9\Day9.csproj" />
   </ItemGroup>
 
 </Project>
